styles.css
#site-header {
    padding-left: 2em;
    padding-top: 2em;
}
#mailing {
    margin-top: -1em;
}
#title {
    color: #1b95e0;
}
#post-block {
    padding-left: 2em;
    padding-right: 2em;
}
#content-block {
    padding-left: 2em;
}
#back-button {
    font-size: 2em;
    color: #12708a;
}
#shareable-box {
    padding-left: 5.5em;
    padding-bottom: 1.5em;
    font-size: small;
}
#shareable-link {
    text-decoration: none;
}
pre.prettyprint {
    border: none !important;
}

